--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_comico">
+    package="com.example.comic_chapter">
    <application
-        android:label="flutter_comico"
+        android:label="comic_chapter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
