--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_comico
+name: comic_chapter
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,15 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  material_floating_search_bar: ^0.2.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_database: any
-  firebase_core: any
-  carousel_slider: any
-  flutter_riverpod: any
 
 dev_dependencies:
   flutter_test:
