--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.16.0
   firebase_auth: ^3.3.17
-
+  cloud_firestore: ^3.1.14
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
