--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/perry/Android/Sdk
-flutter.sdk=/home/perry/snap/flutter/common/flutter
+sdk.dir=C:/Users/ADMIN/AppData/Local/Android/Sdk
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
