--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,7 +39,9 @@ dependencies:
   cloud_firestore: ^3.1.14
   provider: ^6.0.2
   carousel_slider: any
-
+  image_picker: ^0.8.5+3
+  file_picker: ^4.5.1
+  firebase_storage: ^10.2.9
 
 
 dev_dependencies:
