--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.8.5+3
   file_picker: ^4.5.1
   firebase_storage: ^10.2.9
+  fluttertoast: ^8.0.9
 
 
 dev_dependencies:
